ROC-2446 Fix dashboard on mobile (#129)

--- a/src/main/public/stylesheets/components/_dashboard.scss
+++ b/src/main/public/stylesheets/components/_dashboard.scss
@@ -1,19 +1,3 @@
-.action-panel {
-  background-color: $grey-3;
-  padding: 15px 15px 30px;
-  text-align: center;
-
-  .flush-top {
-    font-weight: 700;
-    margin-top: 0;
-  }
-
-  p {
-    margin-bottom: 0;
-    text-align: center;
-  }
-}
-
 .claim-dashboard {
   td {
     &:nth-child(1) {
